<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="contextManual" Id="{862d75da-433e-45f8-b444-e87c42bdc9e7}">
    <Declaration><![CDATA[TYPE contextManual :
STRUCT
	wordOut  : WORD; //0
		reserved1 : ARRAY[1..31] OF WORD; //1-31
	wordIn	 : WORD; //32
		reserved2 : ARRAY[1..7] OF WORD;  //33-39
	monitorType : eCategrories;//40
	monitorIndex : WORD;//41 , 1-based index
	commitMode : eModes;//42
		reserved3 : WORD; //43
	commitSelection : eCategrories;//44
		reserved4 : WORD; //45
	commitIndex  : WORD;//46 , 1-based index
		reserved5  : ARRAY[1..17] OF WORD; //47-63
	commitBlock  : CellDataBlock;//64
	monitorBlock  : CellDataBlock;//128
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>